--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,7 +6,7 @@ on: [push]
 jobs:
   test-lint:  #job id
     name: Test and Lint  #name for GA interface
-    runs-on: ubantu-20.04 #runner (os whwere we run)  
+    runs-on: ubantu-latest #runner (os whwere we run)  
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
